fix: input type=date text-align issue in iOS

--- a/src/components/styled/input.css
+++ b/src/components/styled/input.css
@@ -79,4 +79,7 @@
   /* &::-webkit-calendar-picker-indicator {
     display: none;
   } */
+  &::-webkit-date-and-time-value {
+    text-align: inherit;
+  }
 }
